[metadata]
name = notification_utils
version = 0.2
author = Dark Secret Software Inc.
author-email = admin@darksecretsoftware.com
summary = Utilities for dealing with OpenStack Notifications
description-file = README.md
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
        Topic :: Software Development :: Libraries :: Python Modules
home-page = https://github.com/stackforge/stacktach-notification-utils
keywords =
    openstack
    notifications
    events
    utilities
[files]
packages =
    notification_utils
